fix spacing

--- a/style.css
+++ b/style.css
@@ -74,8 +74,12 @@
 		text-align: center;
 	}
 
+	main {
+		margin-top: 1rem;
+	}
+
 	.social-widget {
-		display: inline-flex;
+		display: flex;
 		list-style: none;
         justify-content: center;
         align-items: center;
